docs/archive/legacy-manifests/jenkins/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.cgraaaj.in`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
      middlewares:
        - name: default-headers
          namespace: default
        # - name: jenkins-headers
  tls:
    secretName: wildcard-cgraaaj-in-tls
